add fonts roboto

--- a/globalStyles.css
+++ b/globalStyles.css
@@ -1,6 +1,6 @@
 @import './fonts/bebasneue.css';
 @import './fonts/lato.css';
-@import './fonts/';
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;500;700;900&display=swap');
 
 * {
   margin: 0;
